updating score works for player one

--- a/project1/styles/main.css
+++ b/project1/styles/main.css
@@ -19,7 +19,7 @@ form {
 
 #scores {
   float: left;
-  width: 20%;
+  width: 20;
   border: 1px black solid; }
 
 /*# sourceMappingURL=main.css.map */
