--- a/project1/styles/main.scss
+++ b/project1/styles/main.scss
@@ -26,3 +26,15 @@ margin-top: -3em;
   width: 20;
   border: 1px black solid;
 }
+
+#roundkeeper {
+  margin: 0 auto;
+  height: 4em;
+  margin-bottom: 2em;
+  width: 70%;
+  border: 1px black solid;
+}
+
+h1 {
+    text-align: center;
+}
