--- a/project1/styles/main.scss
+++ b/project1/styles/main.scss
@@ -27,6 +27,12 @@ margin-top: -3em;
   border: 1px black solid;
 }
 
+#countdown {
+  float: left;
+  width: 20;
+  border: 1px black solid;
+}
+
 #roundkeeper {
   margin: 0 auto;
   height: 4em;
