--- a/project1/styles/main.scss
+++ b/project1/styles/main.scss
@@ -1,30 +1,48 @@
+body {
+  background: white;
+}
+
 form {
     margin: 0 auto;
     width: 400px;
+    height: 400px;
     padding: 1em;
-    border: 1px solid #CCC;
+    border: 1px solid rgb(59,134,134);
     border-radius: 1em;
+    background: rgb(121,189,154);
+    color: aliceblue;
 }
 
-#playerOneName, #playerTwoName {
+#playerOneName {
+  margin-top: 15%;
+}
+
+#playerTwoName {
   margin-top: 1em;
 }
 
 #submitbutton {
 float: right;
 margin-top: -3em;
+border: 0;
+color: aliceblue;
+background: rgb(59,134,134);
 }
 
 #playspace {
   float: left;
   width: 70%;
   border: 1px black solid;
+  border-radius: 1em;
+  padding: 1em;
 }
 
 #scores {
   float: left;
   width: 20;
   border: 1px black solid;
+  padding: 1em;
+
 }
 
 #countdown {
@@ -42,5 +60,29 @@ margin-top: -3em;
 }
 
 h1 {
+  color: aliceblue;
     text-align: center;
+    font-family: 'femme_fatale_britneyregular';
+    font-size: 400%;
+}
+
+h2 {
+  margin: auto;
+  color: black;
+    text-align: center;
+    font-family: 'femme_fatale_britneyregular';
+    font-size: 400%;
+}
+
+@font-face {
+    font-family: 'femme_fatale_britneyregular';
+    src: url('femmefatalealbum-webfont.eot');
+    src: url('femmefatalealbum-webfont.eot?#iefix') format('embedded-opentype'),
+         url('femmefatalealbum-webfont.woff2') format('woff2'),
+         url('femmefatalealbum-webfont.woff') format('woff'),
+         url('femmefatalealbum-webfont.ttf') format('truetype'),
+         url('femmefatalealbum-webfont.svg#femme_fatale_britneyregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
