--- a/project1/styles/main.scss
+++ b/project1/styles/main.scss
@@ -1,8 +1,8 @@
 body {
-  background: white;
+  background: rgb(39, 43, 43);
 }
 
-form {
+#nameForm {
     margin: 0 auto;
     width: 400px;
     height: 400px;
@@ -13,6 +13,15 @@ form {
     color: aliceblue;
 }
 
+#formround {
+  background: rgb(11,72,107);
+  color: aliceblue;
+  border-radius: 1em;
+  border: 1px solid rgb(59,134,134);
+  padding: 1em;
+  margin: 1em;
+}
+
 #playerOneName {
   margin-top: 15%;
 }
@@ -21,7 +30,7 @@ form {
   margin-top: 1em;
 }
 
-#submitbutton {
+#submitbutton, #submitbuttonRoundPlayerOne, #submitbuttonRoundPlayerTwo {
 float: right;
 margin-top: -3em;
 border: 0;
@@ -30,19 +39,23 @@ background: rgb(59,134,134);
 }
 
 #playspace {
+  border: 1px solid rgb(59,134,134);
+  border-radius: 1em;
+  background: rgb(121,189,154);
+  color: aliceblue;
   float: left;
   width: 70%;
-  border: 1px black solid;
-  border-radius: 1em;
   padding: 1em;
 }
 
 #scores {
+  background: rgb(207,240,158);
+  color: rgb(11,72,107);
   float: left;
   width: 20;
   border: 1px black solid;
   padding: 1em;
-
+  border-radius: 20%;
 }
 
 #countdown {
@@ -52,11 +65,13 @@ background: rgb(59,134,134);
 }
 
 #roundkeeper {
+  background: rgb(59,134,134);
+  border: 1px solid rgb(121,189,154);
   margin: 0 auto;
   height: 4em;
   margin-bottom: 2em;
   width: 70%;
-  border: 1px black solid;
+  border-radius: 40%;
 }
 
 h1 {
