--- a/project1/styles/main.scss
+++ b/project1/styles/main.scss
@@ -9,7 +9,7 @@ body {
     padding: 1em;
     border: 1px solid rgb(59,134,134);
     border-radius: 1em;
-    background: rgb(121,189,154);
+    background: rgb(96, 161, 132);
     color: aliceblue;
 }
 
@@ -50,7 +50,7 @@ background: rgb(59,134,134);
 #playspace {
   border: 1px solid rgb(59,134,134);
   border-radius: 1em;
-  background: rgb(121,189,154);
+  background: rgb(96, 161, 132);
   color: aliceblue;
   float: left;
   width: 70%;
@@ -81,7 +81,7 @@ background: rgb(59,134,134);
 
 #roundkeeper {
   background: rgb(59,134,134);
-  border: 1px solid rgb(121,189,154);
+  border: 1px solid rgb(96, 161, 132);
   margin: 0 auto;
   height: 4em;
   margin-bottom: 2em;
